# anchovy

./: .gitignore  LICENSE  anchovy.cabal
src/: Main.hs
src/Anchovy/: Codegen.hs  Lexer.hs  Parser.hs  Syntax.hs
