name:                anchovy
version:             0.1.0.0
synopsis:            A toy language.
license:             MIT
license-file:        LICENSE
author:              Nick Haliday
maintainer:          nick.haliday@gmail.com

category:            Language

build-type:          Simple
cabal-version:       >=1.10

executable anchovy
  build-depends:
    base >=4.7 && <4.8
    , llvm-general >=3.4.4.0 && <3.5
    , haskeline >=0.7.1.3 && <0.8
    , mtl >=2.2.1 && <2.3
    , transformers >=0.4.1.0 && <0.5
    , parsec >=3.1.5 && <3.2
  
  main-is: Main.hs

  hs-source-dirs: src

  default-language:    Haskell2010

